# smix

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: gui.rs  main.rs
smix/: Cargo.toml
smix/src/: lib.rs
