[package]
name = "cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "smix"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
eframe = "0.32.3"
image = { version = "0.25.8", features = ["png"] }
rfd = "0.15.4"
smix = { path = "../smix"}
